<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="toppings">Toppings</string>
    <string name="name">Name</string>
    <string name="whipped">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="two">2</string>
    <string name="order">Order</string>
    <string name="thank_you">Thank you !</string>
    <string name="price_msg">Name: <xliff:g id = "name" example = "Amy">%s</xliff:g></string>
    <string name="order_summary_whipped_cream">Add whipped cream? <xliff:g id="addWhippedCream" example="true">%b</xliff:g></string>
    <string name="order_summary_chocolate">Add chocolate? <xliff:g id="addChocolate" example="true">%b</xliff:g></string>
    <string name="order_summary_quantity">Quantity: <xliff:g id="quantity" example="2">%d</xliff:g></string>
    <string name="order_summary_price">Total: <xliff:g id="price" example="₹10">%s</xliff:g></string>
    <string name="order_summary_email_subject">Just Java order for <xliff:g id="name" example="Amy">%s</xliff:g></string>
</resources>
